# unowned-buf

./: .gitignore  Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_read.rs  fuzz_read_exact.rs  fuzz_read_string.rs
src/: lib.rs
tests/: bad_example.rs  example.rs  test.rs
