[package]
name = "unowned-buf-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.unowned-buf]
path = ".."

[[bin]]
name = "fuzz_read"
path = "fuzz_targets/fuzz_read.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_read_exact"
path = "fuzz_targets/fuzz_read_exact.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_read_string"
path = "fuzz_targets/fuzz_read_string.rs"
test = false
doc = false
bench = false
